finished user revisions, reports WIP

--- a/user-browse-inventory.html
+++ b/user-browse-inventory.html
@@ -80,15 +80,27 @@
                             <!-- Example row, duplicate or populate dynamically as needed -->
                             <tr class="hover:bg-gray-50">
                                 <td class="px-4 py-2 border-b text-sm text-gray-700">123456</td>
-                                <td class="px-4 py-2 border-b text-sm text-gray-700">2022-01-15</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">2025-04-18</td>
                                 <td class="px-4 py-2 border-b text-sm text-gray-700">SLR-001</td>
-                                <td class="px-4 py-2 border-b text-sm text-gray-700">AAF-2022-01</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700"></td>
                                 <td class="px-4 py-2 border-b text-sm text-gray-700">A4 Bond Paper</td>
                                 <td class="px-4 py-2 border-b text-sm text-gray-700">Office Supplies</td>
-                                <td class="px-4 py-2 border-b text-sm text-gray-700">200</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">4</td>
                                 <td class="px-4 py-2 border-b text-sm text-gray-700">Ream</td>
-                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱150</td>
-                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱30,000</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱450.00</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱1,800.00</td>
+                            </tr>
+                            <tr class="hover:bg-gray-50">
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">123457</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">2025-05-20</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">SLR-002</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">AAF-2025-01</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">LAPTOP</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">Office Equipment</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">1</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">Set</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱84,450.00</td>
+                                <td class="px-4 py-2 border-b text-sm text-gray-700">₱82,450.00</td>
                             </tr>
                             <!-- ...more rows as needed... -->
                         </tbody>
