--- a/user-login.html
+++ b/user-login.html
@@ -58,10 +58,10 @@
             </header>
 
             <!-- Search -->
-            <section class="flex justify-between items-center mb-6">
+            <!-- <section class="flex justify-between items-center mb-6">
                 <input type="text" placeholder="Search for items in the Logistics Management Office Inventory......" class="border rounded px-4 py-2 w-full">
                 <button class="bg-green-600 text-white px-4 py-2 mx-5 rounded hover:bg-green-700">Search</button>
-            </section>
+            </section> -->
             <div class="py-3">
                 <h2 class="text-lg font-bold mb-4">Welcome, Daphnie!</h2>
                 <p class="text-gray-600">Here you can manage your requests and view the status of your items.</p>
@@ -90,8 +90,9 @@
                 </div>
             </section>
 
+
             <!--Frequently Requested Items-->
-            <section class="gap-4 mb-6 mx-10">
+            <section class="gap-4 mb-6">
                 <div class="bg-white p-4 rounded shadow m">
                     <h2 class="text-lg font-bold mb-4">Frequently Requested Items</h2>
                     <div class="overflow-x-auto">
@@ -212,7 +213,7 @@
             </section>
 
             <!-- Recent Requests -->
-            <section class="bg-white p-4 rounded shadow">
+            <section class="bg-white p-4 rounded shadow mt-6">
                 <h2 class="text-lg font-bold mb-4">Your Recent Requests</h2>
                 <table class="w-full border-collapse">
                     <thead>
@@ -264,7 +265,7 @@
                             </div>
                             <div>
                                 <div class="text-xs text-gray-500">Request Date</div>
-                                <div class="font-semibold text-sm text-gray-800" id="modalRequestDate">May 15, 2023</div>
+                                <div class="font-semibold text-sm text-gray-800" id="modalRequestDate">May 15, 2025</div>
                             </div>
                             <div>
                                 <div class="text-xs text-gray-500">Status</div>
@@ -301,16 +302,24 @@
                                     <span class="mt-1 w-3 h-3 rounded-full bg-blue-500 flex-shrink-0"></span>
                                     <div>
                                         <div class="font-semibold text-gray-700">Request Submitted</div>
-                                        <div class="text-gray-500">May 15, 2023 - 09:30 AM</div>
+                                        <div class="text-gray-500">May 15, 2025 - 09:30 AM</div>
                                         <div class="text-gray-400">Request for office supplies submitted by Daphnie Pelaez</div>
                                     </div>
                                 </div>
                                 <div class="flex items-start space-x-2">
                                     <span class="mt-1 w-3 h-3 rounded-full bg-yellow-400 flex-shrink-0"></span>
                                     <div>
-                                        <div class="font-semibold text-gray-700">Processing</div>
-                                        <div class="text-gray-500">May 17, 2023 - 02:45 PM</div>
-                                        <div class="text-gray-400">Request being processed by Supply Department</div>
+                                        <div class="font-semibold text-gray-700">Reviewed</div>
+                                        <div class="text-gray-500">May 17, 2025 - 02:45 PM</div>
+                                        <div class="text-gray-400">Request being processed by Logistics Management Office</div>
+                                    </div>
+                                </div>
+                                <div class="flex items-start space-x-2">
+                                    <span class="mt-1 w-3 h-3 rounded-full bg-purple-500 flex-shrink-0"></span>
+                                    <div>
+                                        <div class="font-semibold text-gray-700">Endorsed to Purchasing Department</div>
+                                        <div class="text-gray-500">May 18, 2025 - 10:15 AM</div>
+                                        <div class="text-gray-400">Endorsed by Leah Bee</div>
                                     </div>
                                 </div>
                             </div>
