--- a/user-new-request.html
+++ b/user-new-request.html
@@ -57,27 +57,27 @@
                 </div>
             </header>
 
-            <!-- Search Bar -->
-            <div class="mb-6 flex w-full space-x-4">
-                <div class="relative flex-grow">
-                    <input type="text" 
-                           placeholder="Search for items in Logistics Management Office Inventory" 
-                           class="w-full px-4 py-2 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent">
-                    <div class="absolute inset-y-0 left-0 flex items-center pl-3">
-                        <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                            <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
-                        </svg>
-                    </div>
-                </div>
-                <button class="bg-green-600 hover:bg-green-700 text-white font-medium py-2 px-4 rounded-lg transition duration-200 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
-                    Search
-                </button>
-            </div>
-
             <!-- Form Section -->
             <section class="bg-white p-6 rounded shadow">
                 <h2 class="text-xl font-bold mb-4">Create New Request</h2>
                 <p class="text-gray-600 mb-6">Fill out the form below to submit a new request to the Logistics Management Office</p>
+                
+                <!-- Search Bar -->
+                <div class="mb-6 flex w-full space-x-4">
+                    <div class="relative flex-grow">
+                        <input type="text" 
+                               placeholder="Search for items in Logistics Management Office Inventory" 
+                               class="w-full px-4 py-2 pl-10 pr-4 text-gray-700 bg-white border border-gray-300 rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500 focus:border-transparent">
+                        <div class="absolute inset-y-0 left-0 flex items-center pl-3">
+                            <svg class="w-5 h-5 text-gray-400" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"></path>
+                            </svg>
+                        </div>
+                    </div>
+                    <button class="bg-green-600 hover:bg-green-700 text-white font-medium py-2 px-4 rounded-lg transition duration-200 ease-in-out transform hover:scale-105 focus:outline-none focus:ring-2 focus:ring-green-500 focus:ring-opacity-50">
+                        Search
+                    </button>
+                </div>
                
                 <form id="requestForm">
                     <!-- Request Information Header -->
@@ -92,6 +92,13 @@
                             <label class="block text-gray-700 font-bold mb-2">Request Type</label>
                             <select class="border rounded px-4 py-2 w-full">
                                 <option>Select a request type...</option>
+                                <option value="">Office Supplies</option>
+                                <option value="">Office Equipment</option>
+                                <option value="">Software</option>
+                                <option value="">Hardware</option>
+                                <option value="">Repair</option>
+                                <option value="">Maintenance</option>
+                                <option value="">Others</option>
                             </select>
                         </div>
                     </div>
@@ -172,7 +179,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">A4 Bond Paper</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 200</p>
+                        <p class="text-green-600 font-bold">In stock: 200 reams</p>
+                        <p class="text-sm text-gray-500">Units: Ream (500 sheets)</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <!-- Stepper -->
                             <button onclick="decrement('item1')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
@@ -183,7 +191,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Blue Ballpoint Pens</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 120</p>
+                        <p class="text-green-600 font-bold">In stock: 120 pieces</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item2')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item2" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -193,7 +202,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Staples</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-yellow-600 font-bold">Low stock: 8</p>
+                        <p class="text-yellow-600 font-bold">Low stock: 8 boxes</p>
+                        <p class="text-sm text-gray-500">Units: Box (5,000 staples)</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item3')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item3" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -204,6 +214,7 @@
                         <h3 class="text-lg font-bold">Stamp Pad</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
                         <p class="text-red-600 font-bold">Out of stock</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button disabled class="bg-gray-200 text-gray-400 px-2 py-1 rounded cursor-not-allowed">-</button>
                             <input id="item4" type="number" value="0" min="0" class="border rounded w-12 text-center bg-gray-100" disabled>
@@ -214,7 +225,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Yellow Legal Pad</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 60</p>
+                        <p class="text-green-600 font-bold">In stock: 60 pads</p>
+                        <p class="text-sm text-gray-500">Units: Pad (50 sheets)</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item5')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item5" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -224,7 +236,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Whiteboard Marker</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-yellow-600 font-bold">Low stock: 5</p>
+                        <p class="text-yellow-600 font-bold">Low stock: 5 pieces</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item6')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item6" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -234,7 +247,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">USB Flash Drive 16GB</h3>
                         <p class="text-gray-600">Category: IT Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 30</p>
+                        <p class="text-green-600 font-bold">In stock: 30 pieces</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item7')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item7" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -244,7 +258,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Ethernet Cable</h3>
                         <p class="text-gray-600">Category: IT Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 15</p>
+                        <p class="text-green-600 font-bold">In stock: 15 pieces</p>
+                        <p class="text-sm text-gray-500">Units: Piece (3m)</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item8')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item8" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -254,7 +269,8 @@
                     <div class="border rounded p-4">
                         <h3 class="text-lg font-bold">Filing Folder</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
-                        <p class="text-green-600 font-bold">In stock: 100</p>
+                        <p class="text-green-600 font-bold">In stock: 100 pieces</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button onclick="decrement('item9')" class="bg-gray-200 text-gray-700 px-2 py-1 rounded">-</button>
                             <input id="item9" type="number" value="0" min="0" class="border rounded w-12 text-center">
@@ -265,6 +281,7 @@
                         <h3 class="text-lg font-bold">Correction Tape</h3>
                         <p class="text-gray-600">Category: Office Supplies</p>
                         <p class="text-red-600 font-bold">Out of stock</p>
+                        <p class="text-sm text-gray-500">Units: Piece</p>
                         <div class="flex items-center space-x-2 mt-2">
                             <button disabled class="bg-gray-200 text-gray-400 px-2 py-1 rounded cursor-not-allowed">-</button>
                             <input id="item10" type="number" value="0" min="0" class="border rounded w-12 text-center bg-gray-100" disabled>
