--- a/user-reports.html
+++ b/user-reports.html
@@ -85,12 +85,14 @@
         <div class="grid grid-cols-2 gap-4 mb-6">
             <div class="bg-white rounded shadow p-4">
                 <div class="text-center font-bold text-lg mb-2 text-blue-700 tracking-wide">REQUESTS BY TERM</div>
-                <canvas id="barChart" height="180"></canvas>
+                <div class="flex justify-center">
+                    <canvas id="barChart" width="300" height="300"></canvas>
+                </div>
             </div>
             <div class="bg-white rounded shadow p-4">
                 <div class="text-center font-bold text-lg mb-2">Request Status Overview</div>
-                <div class="flex justify-center">
-                    <canvas id="donutChart" width="40" height="40"></canvas>
+                <div class="flex justify-center" style="width: 150px; height: 150px; margin: 0 auto;">
+                    <canvas id="donutChart"></canvas>
                 </div>
                 <div class="flex justify-center mt-2 space-x-4 text-xs">
                     <div class="flex items-center"><span class="inline-block w-3 h-3 bg-yellow-300 rounded-full mr-1"></span>Pending</div>
@@ -201,22 +203,51 @@
     new Chart(document.getElementById('barChart'), {
         type: 'bar',
         data: {
-            labels: ['IT', 'HR', 'Finance', 'Marketing', 'Operations'],
+            labels: ['1st Term', '2nd Term', '3rd Term'],
             datasets: [{
                 label: 'Total Requests',
-                data: [25, 18, 14, 28, 20],
-                backgroundColor: ['#60a5fa', '#f87171', '#fbbf24', '#34d399', '#a78bfa']
+                data: [25, 18, 14],
+                backgroundColor: ['#60a5fa', '#f87171', '#fbbf24']
             }]
         },
         options: {
-            plugins: { legend: { display: false } },
-            scales: { y: { beginAtZero: true } }
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: { 
+                legend: { display: false },
+                title: { display: false }
+            },
+            scales: { 
+                y: { 
+                    beginAtZero: true,
+                    display: false
+                },
+                x: {
+                    ticks: {
+                        maxRotation: 45,
+                        minRotation: 45,
+                        font: {
+                            size: 8
+                        }
+                    }
+                }
+            }
         }
     });
 
     // Donut Chart
     new Chart(document.getElementById('donutChart'), {
         type: 'doughnut',
+        options: {
+            responsive: true,
+            maintainAspectRatio: false,
+            plugins: {
+                legend: {
+                    display: false
+                }
+            },
+            cutout: '70%'
+        },
         data: {
             labels: ['Pending', 'Delivered', 'Rejected'],
             datasets: [{
