--- a/user-browse-inventory.html
+++ b/user-browse-inventory.html
@@ -59,7 +59,18 @@
 
             <!-- Inventory Table Section -->
             <section class="bg-white p-6 rounded shadow">
-                <h2 class="text-xl font-bold mb-4">Available Inventories</h2>
+                <div class="flex justify-between items-center mb-4">
+                    <h2 class="text-xl font-bold">Available Inventories</h2>
+                </div>
+                    <div class="relative w-full mb-6">
+                        <input type="text" placeholder="Search inventory..." class="w-full pl-10 pr-4 py-2 border rounded-lg focus:outline-none focus:ring-2 focus:ring-green-500">
+                        <div class="absolute left-3 top-2.5 text-gray-400">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z" />
+                            </svg>
+                        </div>
+                    </div>
+               
                 <div class="overflow-x-auto">
                     <table class="min-w-full border border-gray-200">
                         <thead class="bg-gray-100">
