--- a/user-requests.html
+++ b/user-requests.html
@@ -86,7 +86,7 @@
                             <tr class="bg-gray-200">
                                 <th class="border p-2 font-bold text-left">Request ID</th>
                                 <th class="border p-2 font-bold text-left">Items</th>
-                                <th class="border p-2 font-bold text-left">Units</th>
+                                <th class="border p-2 font-bold text-left">Priority Level</th>
                                 <th class="border p-2 font-bold text-left">Date</th>
                                 <th class="border p-2 font-bold text-left">Status</th>
                                 <th class="border p-2 font-bold text-left">Actions</th>
@@ -96,7 +96,7 @@
                             <tr>
                                 <td class="border p-2">#REQ-0124</td>
                                 <td class="border p-2">A4 Bond Paper x2, Stapler x1</td>
-                                <td class="border p-2"></td>
+                                <td class="border p-2">Medium</td>
                                 <td class="border p-2">May 15, 2025</td>
                                 <td class="border p-2">
                                     <span class="text-yellow-600">Pending</span>
