--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -31,7 +31,7 @@
                     <li><a href="admin-new-request.html" class="block py-2 px-4 rounded hover:bg-red-700">New Request</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">My Requests</a></li>
                     <li><a href="admin-department-requests.html" class="block py-2 px-4 rounded hover:bg-red-700">Department Requests</a></li>
-                    <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">Reports</a></li>
+                    <li><a href="admin-reports.html " class="block py-2 px-4 rounded hover:bg-red-700">Reports</a></li>
                     <li><a href="#" class="block py-2 px-4 rounded hover:bg-red-700">Settings</a></li>
                 </ul>
             </nav>
@@ -70,7 +70,7 @@
                     <p class="text-yellow-600">+3 this week</p>
                 </div>
                 <div class="bg-white p-4 rounded shadow">
-                    <h2 class="text-lg font-bold text-green-700">Delviere</h2>
+                    <h2 class="text-lg font-bold text-green-700">Delivered</h2>
                     <p class="text-2xl font-bold text-green-700">95</p>
                     <p class="text-green-600">+6 this week</p>
                 </div>
@@ -97,19 +97,20 @@
             <section class="bg-white p-4 rounded shadow mb-6">
                 <h2 class="text-lg font-bold mb-4">Recent Requests</h2>
                 <div class="flex flex-wrap items-center mb-4 gap-2">
+                    <select id="statusFilter" class="border rounded px-2 py-1 text-sm">
+                        <option value="All">All Status</option>
+                        <option value="Delivered">Delivered</option>
+                        <option value="Pending">Pending</option>
+                        <option value="Rejected">Rejected</option>
+                    </select>
                     <select class="border rounded px-2 py-1 text-sm">
                         <option>All Departments</option>
-                        <option>Science Department</option>
-                        <option>Engineering</option>
-                        <option>Business School</option>
+                        <option>IT Department</option>
+                        <option>HR Department</option>
+                        <option>Finance Department</option>
+                        <option >Marketing Department</option>
                     </select>
-                    <select class="border rounded px-2 py-1 text-sm">
-                        <option>All Status</option>
-                        <option>Pending</option>
-                        <option>In Progress</option>
-                        <option>Completed</option>
-                    </select>
-                    <button class="bg-red-600 text-white px-4 py-1 rounded text-sm hover:bg-red-700">Filter</button>
+                    <button onclick="filterRequests()" class="bg-red-600 text-white px-4 py-1 rounded text-sm hover:bg-red-700">Filter</button>
                 </div>
                 <div class="overflow-x-auto">
                     <table class="min-w-full border-collapse">
@@ -125,8 +126,8 @@
                                 <th class="border p-2 font-bold text-left">Actions</th>
                             </tr>
                         </thead>
-                        <tbody>
-                            <tr>
+                        <tbody id="requestsTable">
+                            <tr class="request-row" data-status="Pending">
                                 <td class="border p-2 font-bold">REQ-2023-0124</td>
                                 <td class="border p-2">Dr. Maria Santos</td>
                                 <td class="border p-2">College of Information Technology and Computer Science</td>
@@ -147,14 +148,14 @@
                                     <button onclick="showRejectModal(this)" class="text-red-600 hover:underline text-xs font-semibold" data-id="REQ-2023-0124">Reject</button>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="request-row" data-status="Rejected">
                                 <td class="border p-2 font-bold">REQ-2023-0123</td>
                                 <td class="border p-2">Prof. James Lee</td>
                                 <td class="border p-2">College of Engineering and Architecture</td>
                                 <td class="border p-2">Supplies</td>
                                 <td class="border p-2">Oct 14, 2023</td>
                                 <td class="border p-2">
-                                    <span class="bg-blue-100 text-blue-700 px-2 py-1 rounded text-xs font-semibold">In Progress</span>
+                                    <span class="bg-red-600 text-white px-2 py-1 rounded text-xs font-semibold">Rejected</span>
                                 </td>
                                 <td class="border p-2">
                                     <span class="inline-flex items-center">
@@ -168,14 +169,14 @@
                                     <button onclick="showRejectModal(this)" class="text-red-600 hover:underline text-xs font-semibold" data-id="REQ-2023-0123">Reject</button>
                                 </td>
                             </tr>
-                            <tr>
+                            <tr class="request-row" data-status="Delivered">
                                 <td class="border p-2 font-bold">REQ-2023-0122</td>
                                 <td class="border p-2">Dean Robert Garcia</td>
                                 <td class="border p-2">College of Business Administration</td>
                                 <td class="border p-2">Furniture</td>
                                 <td class="border p-2">Oct 13, 2023</td>
                                 <td class="border p-2">
-                                    <span class="bg-green-100 text-green-700 px-2 py-1 rounded text-xs font-semibold">Completed</span>
+                                    <span class="bg-green-100 text-green-700 px-2 py-1 rounded text-xs font-semibold">Delivered</span>
                                 </td>
                                 <td class="border p-2">
                                     <span class="inline-flex items-center">
@@ -436,6 +437,25 @@
                 closeEndorseModal();
             }
         });
+
+        // Filter requests by status
+        function filterRequests() {
+            const statusFilter = document.getElementById('statusFilter');
+            const selectedStatus = statusFilter.value;
+            const requestsTable = document.getElementById('requestsTable');
+            const rows = requestsTable.rows;
+
+            for (let i = 0; i < rows.length; i++) {
+                const row = rows[i];
+                const status = row.getAttribute('data-status');
+
+                if (selectedStatus === 'All' || status === selectedStatus) {
+                    row.classList.remove('hidden');
+                } else {
+                    row.classList.add('hidden');
+                }
+            }
+        }
 
         // Line Chart: Requests Over Time by Department
         const ctxLine = document.getElementById('lineChart').getContext('2d');
