--- a/user-reports.html
+++ b/user-reports.html
@@ -201,55 +201,105 @@
 
 <!-- Request Details Modal -->
 <div id="requestModal" class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center hidden">
-    <div class="bg-white rounded-lg p-6 w-full max-w-2xl">
-        <div class="flex justify-between items-center mb-4">
-            <h3 class="text-xl font-bold">Request Details</h3>
-            <button id="closeModal" class="text-gray-500 hover:text-gray-700">
+    <div class="bg-white rounded-lg w-full max-w-4xl overflow-hidden">
+        <!-- Modal Header -->
+        <div class="bg-green-700 text-white p-4 flex justify-between items-center">
+            <div class="flex items-center">
+                <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6 mr-2" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12h6m-6 4h6m2 5H7a2 2 0 01-2-2V5a2 2 0 012-2h5.586a1 1 0 01.707.293l5.414 5.414a1 1 0 01.293.707V19a2 2 0 01-2 2z" />
+                </svg>
+                <h3 class="text-lg font-semibold">REQUEST DETAILS</h3>
+            </div>
+            <button id="closeModal" class="text-white hover:text-gray-200">
                 <svg xmlns="http://www.w3.org/2000/svg" class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke="currentColor">
                     <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
                 </svg>
             </button>
         </div>
-        <div class="space-y-4">
-            <div class="grid grid-cols-2 gap-4">
-                <div>
-                    <p class="text-gray-500">Request ID</p>
-                    <p id="modalReqId" class="font-semibold">-</p>
-                </div>
-                <div>
-                    <p class="text-gray-500">Requester</p>
-                    <p id="modalRequester" class="font-semibold">-</p>
-                </div>
-                <div>
-                    <p class="text-gray-500">Item</p>
-                    <p id="modalActivity" class="font-semibold">-</p>
-                </div>
-                <div>
-                    <p class="text-gray-500">Request Type</p>
-                    <p id="modalItem" class="font-semibold">-</p>
-                </div>
-                <div>
-                    <p class="text-gray-500">Date Requested</p>
-                    <p id="modalReqType" class="font-semibold">-</p>
-                </div>
-                <div>
-                    <p class="text-gray-500">Last Updated</p>
-                    <p id="modalStatus" class="font-semibold">-</p>
-                </div>
-            </div>
-            <div>
-                <p class="text-gray-500">Status</p>
-                <p id="modalDate" class="font-semibold">-</p>
-            </div>
-            
-        </div>
-        <div class="mt-6 flex justify-end">
-            <button id="#" class="px-4 py-2 bg-gray-200 hover:bg-gray-300 rounded">Print Request</button>
-        </div>
-        <div class="mt-6 flex justify-end">
-            <button id="closeModalBtn" class="px-4 py-2 bg-gray-200 hover:bg-gray-300 rounded">Close</button>
-        </div>
         
+        <!-- Modal Content -->
+        <div class="p-6">
+            <div class="grid grid-cols-2 gap-6 mb-6">
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Request ID</p>
+                    <p id="modalReqId" class="font-semibold text-lg">-</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Requester</p>
+                    <p id="modalRequester" class="font-semibold text-lg">-</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Item</p>
+                    <p id="modalActivity" class="font-semibold text-lg">-</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Request Type</p>
+                    <p id="modalItem" class="font-semibold text-lg">-</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Date Requested</p>
+                    <p id="modalReqType" class="font-semibold text-lg">-</p>
+                </div>
+                <div>
+                    <p class="text-sm text-gray-500 mb-1">Last Updated</p>
+                    <p id="modalStatus" class="font-semibold text-lg">-</p>
+                </div>
+                <div class="col-span-2">
+                    <p class="text-sm text-gray-500 mb-1">Status</p>
+                    <p id="modalDate" class="font-semibold text-lg">-</p>
+                </div>
+            </div>
+
+            <!-- Request Timeline -->
+            <div class="border-t pt-4">
+                <h4 class="font-semibold mb-4">Request Timeline</h4>
+                <div class="space-y-4">
+                    <div class="flex items-start">
+                        <div class="bg-green-100 rounded-full p-2 mr-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+                        <div>
+                            <p class="font-medium">Request Submitted</p>
+                            <p class="text-sm text-gray-500">June 15, 2023 10:30 AM</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start">
+                        <div class="bg-green-100 rounded-full p-2 mr-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 5H7a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2V7a2 2 0 00-2-2h-2M9 5a2 2 0 002 2h2a2 2 0 002-2M9 5a2 2 0 012-2h2a2 2 0 012 2" />
+                            </svg>
+                        </div>
+                        <div>
+                            <p class="font-medium">Request Approved</p>
+                            <p class="text-sm text-gray-500">June 16, 2023 9:15 AM</p>
+                        </div>
+                    </div>
+                    <div class="flex items-start">
+                        <div class="bg-green-100 rounded-full p-2 mr-3">
+                            <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5 text-green-600" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                                <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 13l4 4L19 7" />
+                            </svg>
+                        </div>
+                        <div>
+                            <p class="font-medium">Item Delivered</p>
+                            <p class="text-sm text-gray-500">June 17, 2023 2:45 PM</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <!-- Modal Footer -->
+        <div class="bg-gray-50 px-6 py-4 flex justify-end space-x-3">
+            <button id="printBtn" class="px-4 py-2 bg-white border border-gray-300 rounded-md text-sm font-medium text-gray-700 hover:bg-gray-50 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                Print Request
+            </button>
+            <button id="closeModalBtn" class="px-4 py-2 border border-transparent rounded-md shadow-sm text-sm font-medium text-white bg-green-600 hover:bg-green-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-green-500">
+                Close
+            </button>
+        </div>
     </div>
 </div>
 
