--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             } else if (email === 'user01@uc-crms.com') {
                 window.location.href = 'user-login.html';
             } else if (email === 'finance01@uc-crms.com') {
-                window.location.href = 'finance-dashboard.html';
+                window.location.href = 'finance-login.html';
             }else if (email ==='purchasing01@uc-crms.com') {
                 window.location.href = 'purchasing-login.html';
             }else {
